--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -23,13 +23,13 @@
         const ctx = canvas.getContext("2d");
 
         const playerImage = new Image();
-        playerImage.src = "../../../assets/Player.png";
+        playerImage.src = "../../assets/Player.png";
 
         const objectImage = new Image();
-        objectImage.src = "../../../assets/plant.png";
+        objectImage.src = "../../assets/plant.png";
 
         const backgroundImage = new Image();
-        backgroundImage.src = "../../../assets/Grass.png";
+        backgroundImage.src = "../../assets/Grass.png";
 
         const player = {
             x: 50,
