--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <button class="button4" onclick="window.location.href = &#39;ExtraPages/Farmlits.html&#39;;">Farm-lits</button>
     <button class="button4" onclick="window.location.href = &#39;ExtraPages/Updates.HTML&#39;;">Updates</button>
-    <button class="button4" onclick="window.location.href = &#39;ExtraPages/minigames/minigame1.html&#39;;">Minigame</button>
+    <button class="button4" onclick="window.location.href = &#39;ExtraPages/minigames/minigame1.html&#39;;">Minigame 1</button>
     </div>
     
 
