--- a/ExtraPages/minigame1.html
+++ b/ExtraPages/minigame1.html
@@ -29,7 +29,7 @@
         objectImage.src = "../assets/plant.png";
 
         const backgroundImage = new Image();
-        backgroundImage.src = "../../assets/Grass.png";
+        backgroundImage.src = "../assets/Grass.png";
 
         const player = {
             x: 50,
