--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -32,7 +32,7 @@
             x: 50,
             y: 50,
             size: 40,
-            speed: 3 // Reduced speed
+            speed: 3 // Initial speed
         };
 
         // Game state
@@ -56,7 +56,7 @@
                 // Calculate the angle to the mouse
                 const angle = Math.atan2(mouse.y - shape.y, mouse.x - shape.x);
 
-                // Move the shape towards the mouse
+                // Move the shape towards the mouse with variable speed
                 shape.x += Math.cos(angle) * shape.speed;
                 shape.y += Math.sin(angle) * shape.speed;
 
@@ -64,7 +64,7 @@
                 const distance = Math.hypot(shape.x - mouse.x, shape.y - mouse.y);
                 if (distance < shape.size) {
                     gameOver = true;
-                    alert(`Game Over! You were caught. Your score: ${score}`);
+                    alert(`Game Over! You were caught. Your score: ${score.toFixed(0)}`);
                 }
 
                 // Draw the shape image with increased size
@@ -75,6 +75,9 @@
 
                 // Update the score more slowly
                 score += 0.1;
+
+                // Increase speed based on the score
+                shape.speed = 3 + score * 0.01;
 
                 // Display the score
                 ctx.font = "20px Arial";
