--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -15,13 +15,19 @@
 
         @font-face {
             font-family: "Oswald";
-            src: url("../../extra/Oswald.ttf") format("truetype");
+            src: url("path/to/your/font/Oswald.ttf") format("truetype");
         }
     </style>
     <title>Mouse Chase Game</title>
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+
+    <!-- Add an audio element for background music -->
+    <audio id="backgroundMusic" loop>
+        <source src="../../extra/Unreal.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <script>
         // Get the canvas and its context
@@ -111,6 +117,10 @@
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
         });
+
+        // Play the background music
+        const backgroundMusic = document.getElementById('backgroundMusic');
+        backgroundMusic.play();
 
         // Start the game loop
         update();
