--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -24,7 +24,7 @@
     <canvas id="gameCanvas"></canvas>
 
     <!-- Add an audio element for background music -->
-    <audio id="backgroundMusic" loop>
+    <audio control loop>
         <source src="../../extra/Unreal.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
