--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -24,8 +24,9 @@
     <canvas id="gameCanvas"></canvas>
 
     <!-- Add an audio element for background music -->
-    <audio control loop>
-        <source src="../../extra/Unreal.mp3" type="audio/mpeg">
+    <!-- Add an audio element for background music -->
+    <audio id="backgroundMusic" control loop>
+        <source src="../../extra/Unreal.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 
