--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -15,7 +15,7 @@
 
         @font-face {
             font-family: "Oswald";
-            src: url("../../assets/Oswald.ttf") format("truetype");
+            src: url("../../extra/Oswald.ttf") format("truetype");
         }
     </style>
     <title>Mouse Chase Game</title>
