--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -59,29 +59,28 @@
         const mouseImage = new Image();
         mouseImage.src = "../../assets/Player.png";
 
-        // Wait for the mouse image to load
-        mouseImage.onload = () => {
-            // Set the size of the player
+        // Set the size of the player after the image has loaded
+        mouseImage.onload = function() {
             mouseImage.width = 100;
             mouseImage.height = 100;
+
+            // Wait for other images to load before starting the game
+            Promise.all([shapeImage, backgroundImage].map(img => {
+                return new Promise((resolve, reject) => {
+                    img.onload = resolve;
+                    img.onerror = reject;
+                });
+            })).then(() => {
+                // All images have loaded, start the game
+                update();
+            }).catch(error => {
+                console.error("Error loading images:", error);
+            });
         };
 
         // Load background image
         const backgroundImage = new Image();
         backgroundImage.src = "../../assets/Grass.png";
-
-        // Wait for images to load before starting the game
-        Promise.all([shapeImage, mouseImage, backgroundImage].map(img => {
-            return new Promise((resolve, reject) => {
-                img.onload = resolve;
-                img.onerror = reject;
-            });
-        })).then(() => {
-            // All images have loaded, start the game
-            update();
-        }).catch(error => {
-            console.error("Error loading images:", error);
-        });
 
         // Update function
         function update() {
@@ -121,7 +120,7 @@
                 ctx.fillText(`Score: ${score.toFixed(0)}`, 20, 30);
 
                 // Draw the custom mouse cursor
-                ctx.drawImage(mouseImage, mouse.x - mouseImage.width / 2, mouse.y - mouseImage.height / 2, 100,100);
+                ctx.drawImage(mouseImage, mouse.x - mouseImage.width / 2, mouse.y - mouseImage.height / 2);
 
                 // Request the next frame
                 requestAnimationFrame(update);
