--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -15,7 +15,7 @@
 
         @font-face {
             font-family: "Oswald";
-            src: url("../../extra/Oswald.ttf") format("truetype");
+            src: url("path/to/your/font/Oswald.ttf") format("truetype");
         }
     </style>
     <title>Mouse Chase Game</title>
@@ -24,8 +24,8 @@
     <canvas id="gameCanvas"></canvas>
 
     <!-- Add an audio element for background music -->
-    <audio id="backgroundMusic" control>
-        <source src="https://ia801001.us.archive.org/26/items/unrealsuperhero3bykenetrezmp3160k/_Unreal%20Super%20Hero%203_%20by%20Kenet%20_%20Rez%28MP3_160K%29.mp3" type="audio/mp3">
+    <audio id="backgroundMusic" loop>
+        <source src="../../extra/Unreal.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 
