--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -15,7 +15,7 @@
 
         @font-face {
             font-family: "Oswald";
-            src: url("path/to/your/font/Oswald.ttf") format("truetype");
+            src: url("../../extra/Oswald.ttf") format("truetype");
         }
     </style>
     <title>Mouse Chase Game</title>
@@ -24,10 +24,6 @@
     <canvas id="gameCanvas"></canvas>
 
     <!-- Add an audio element for background music -->
-    <audio id="backgroundMusic" loop>
-        <source src="../../extra/Unreal.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
 
     <script>
         // Get the canvas and its context
