--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
     <button class="button4" onclick="window.location.href = &#39;ExtraPages/Farmlits.html&#39;;">Farm-lits</button>
     <button class="button4" onclick="window.location.href = &#39;ExtraPages/Updates.HTML&#39;;">Updates</button>
+
+<h2>Extra Content</h2>
+<hr>  
+        
     <button class="button4" onclick="window.location.href = &#39;ExtraPages/minigames/minigame1.html&#39;;">Minigame</button>
     </div>
     
