--- a/ExtraPages/minigames/minigame1.html
+++ b/ExtraPages/minigames/minigame1.html
@@ -20,7 +20,7 @@
             src: url("../../extra/Oswald.ttf") format("truetype");
         }
     </style>
-    <title>Mouse Chase Game</title>
+    <title>Sel chases the Mouse</title>
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
