--- a/ExtraPages/Minigames.html
+++ b/ExtraPages/Minigames.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <title>Minigames</title>
+
+<link rel="icon" href="../extra/favicon.png" type="image/x-icon"/>
+<link rel="shortcut icon" href="../extra/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../extra/style.css"
+  
 </head>
 <body>
 </body>
