--- a/ExtraPages/Minigames.html
+++ b/ExtraPages/Minigames.html
@@ -9,5 +9,8 @@
   
 </head>
 <body>
+
+     <button class="button4" onclick="window.location.href = 'minigames/minigame1.html';">Sel chases the Mouse</button>
+        <button class="button4" onclick="window.location.href = '../index.html';">Back</button>
 </body>
 </html>
