--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h2>Extra Content</h2>
 <hr>  
         
-    <button class="button4" onclick="window.location.href = &#39;ExtraPages/minigames/minigame1.html&#39;;">Minigame</button>
+    <button class="button4" onclick="window.location.href = &#39;ExtraPages/minigame.html&#39;;">Minigame</button>
     </div>
     
 
