--- a/ExtraPages/How to.HTML
+++ b/ExtraPages/How to.HTML
@@ -19,6 +19,8 @@
 <h1>Go to grassy with your money.<br> Then Click. you get better plants!</h1>
 <img src="../assets/ezgif-1-808a9ec133.gif" alt="How to">
 <h1>IF you have enough plants upgrades<br> go to him and Click. you get more money!</h1>
+<img src="../assets/ezgif-3-4b6096aad2.gif" alt="How to">
+<h1>IF you have enough Money Upgrades<br> go to him and Click. There's now a discount!</h1>
     <div>
     <button class="button4" onclick="window.location.href = '../index.html';">Back</button>
     </div>
