--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)file:///D:/Farmer%20Mayhem/Start.HTML -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html><head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7045262883065958"
+     crossorigin="anonymous"></script>
+    
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Farmer Mayhem : Menu</title>
     <!-- Link HTML file to CSS stylesheet -->
 <link rel="icon" href="extra/favicon.png" type="image/x-icon">
