--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)file:///D:/Farmer%20Mayhem/Start.HTML -->
 <html><head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7045262883065958"
-     crossorigin="anonymous"></script>
+<meta name="google-adsense-account" content="ca-pub-7045262883065958">
     
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Farmer Mayhem : Menu</title>
